--- a/src/components/app.css
+++ b/src/components/app.css
@@ -1,25 +1,24 @@
 #root {
-  text-align: left;
+  text-align: center;
   width: 100%;
-  margin: 0 auto;
   overflow: scroll;
   background-color: #494440;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: center;  */
   font-size: cal(10px + 2vmin);
   color: #ffffff;
   font: impact;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
@@ -47,4 +46,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
